<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="0dp"
    android:paddingLeft="0dp"
    android:paddingRight="0dp"
    android:paddingTop="0dp"
    android:keepScreenOn="true"
    style="@style/DefaultBackground"
    tools:context=".activities.PatientListActivity">

    <RelativeLayout
        android:orientation="horizontal"
        android:layout_width="@dimen/activity_eca_small"
        android:layout_height="match_parent"
        android:layout_centerVertical="true"
        android:layout_alignParentEnd="true"
        android:id="@+id/linearLayoutECA"
        style="@style/DefaultBackground">

        <FrameLayout
            android:id="@+id/placeholderECA"
            style="@style/ECAPlaceholder"
            android:layout_width="300dp"
            android:layout_height="130dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="35dp"
            android:layout_marginEnd="18dp"
            android:layout_marginBottom="10dp"
            android:longClickable="false" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=""
            android:id="@+id/placeholderECAText"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/placeholderECA" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/placeholderECAText">

            <Button
                android:id="@+id/addPatientButton"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:layout_alignStart="@+id/selectPatientButton"
                android:layout_alignEnd="@+id/selectPatientButton"
                android:layout_marginTop="20dp"
                android:background="@drawable/buttonshape"
                android:text="@string/new_user"
                android:textSize="17sp" />

            <Button
                android:id="@+id/selectPatientButton"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:layout_below="@+id/addPatientButton"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="2dp"
                android:background="@drawable/buttonshape"
                android:enabled="false"
                android:text="@string/select_user"
                android:textColor="#757575"
                android:textSize="17sp" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="10dp"
                android:id="@+id/secretButton"
                android:background="@android:color/transparent"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:enabled="false" />

        </RelativeLayout>


    </RelativeLayout>

    <EditText
        android:id="@+id/search_input"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/search_patients_hint"
        android:textSize="25sp"
        android:inputType="text"
        android:layout_toStartOf="@+id/linearLayoutECA" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:showDividers="middle"
        android:layout_toStartOf="@+id/linearLayoutECA"
        android:layout_below="@+id/search_input">

        <ListView
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:id="@+id/patientListView" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/patientDetailsTV"
                android:padding="20dp"
                android:textSize="50sp"
                android:layout_above="@+id/patientRecordsTextView" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/patientRecordsTextView"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:maxLines="10"
                android:scrollbars="vertical"
                />
        </RelativeLayout>

    </LinearLayout>


</RelativeLayout>
